--- a/LCTMoodle/Views/ChuDe/_DanhSach_Item.cshtml
+++ b/LCTMoodle/Views/ChuDe/_DanhSach_Item.cshtml
@@ -2,7 +2,7 @@
 @model DTOLayer.ChuDeDTO
 @{
     bool coChon = ViewData["CoChon"] != null && (bool)ViewData["CoChon"];
-    bool coQuyenQL = (bool)ViewData["CoQuyenQL"];
+    bool coQuyenQL = !coChon && (bool)ViewData["CoQuyenQL"];
 }
 
 <li data-doi-tuong="muc" data-loai="ds-nut" data-ma="@Model.ma" title="Có @LCTHelper.layString(Model.duLieuThem, "SLChuDeCon", "0") chủ đề và @LCTHelper.layString(Model.duLieuThem, "SLKhoaHocCon", "0") khóa học thuộc chủ đề này">
