--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -144,7 +144,7 @@
                         @if (Session["NguoiDung"] != null)
                         {
                             <a href="/NguoiDung/Xem/@nguoiDung.ma">
-                                <section class="khung-thong-tin">
+                                <section class="khung-thong-tin-lct">
                                     <div class="hinh-dai-dien">
                                         @NguoiDungView.hinhDaiDien(nguoiDung)
                                     </div>
