--- a/LCTMoodle/Views/KhoaHoc/DanhSach.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/DanhSach.cshtml
@@ -63,11 +63,11 @@
         <section class="noi-dung khung-khoa-hoc">
             <ul id="danh_sach" class="danh-sach">@Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", Model)</ul>
             <section class="thong-bao">Không có khóa học phù hợp</section>           
-            @*@Html.Partial("~/Views/LCT/_PhanTrang.cshtml", null, new ViewDataDictionary()
+            @Html.Partial("~/Views/LCT/_PhanTrang.cshtml", null, new ViewDataDictionary()
             {
                 { "TongSoLuong", LCTHelper.layGiaTri<int>(Model[0].duLieuThem, "TongSoDong", 0) },
-                { "SoLuongMoiTrang", 1 }
-            })*@
+                { "SoLuongMoiTrang", Data.GiaTri.soLuongKhoaHocMoiTrang }
+            })
         </section>
     </section>
 }
