--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -144,7 +144,7 @@
                         @if (Session["NguoiDung"] != null)
                         {
                             <a href="/NguoiDung/Xem/@nguoiDung.ma">
-                                <section class="khung-thong-tin-lct">
+                                <section class="khung-thong-tin">
                                     <div class="hinh-dai-dien">
                                         @NguoiDungView.hinhDaiDien(nguoiDung)
                                     </div>
@@ -167,11 +167,14 @@
                                 <ul>
                                     @foreach (var khoaHoc in ketQua.ketQua as List<DTOLayer.KhoaHocDTO>)
                                     {
-                                        <li>
-                                            <a href="/KhoaHoc/@khoaHoc.ma">
-                                                @khoaHoc.ten
-                                            </a>
-                                        </li>
+                                        if (khoaHoc != null)
+                                        {
+                                            <li>
+                                                <a href="/KhoaHoc/@khoaHoc.ma">
+                                                    @khoaHoc.ten
+                                                </a>
+                                            </li>
+                                        }
                                     }
                                 </ul>
                             </li>
@@ -204,8 +207,8 @@
                                     <section class="chuc-nang">
                                         <ul id="danh_sach_chuc_nang_lct" class="danh-sach">
                                             @{
-                                List<string> danhSach = ViewData["ChucNang"] as List<string>;
-                                int soLuong = danhSach.Count;
+                                                List<string> danhSach = ViewData["ChucNang"] as List<string>;
+                                                int soLuong = danhSach.Count;
                                             }
                                             @for (int i = 0; i < soLuong; i += 2)
                                             {
