--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -72,7 +72,7 @@
                             <li>
                                 <a href="javascript:void(0)" data-mo-doi-tuong="HopDieuKhien">
                                     @NguoiDungView.hinhDaiDien(nguoiDung)
-                                    <span>@nguoiDung.tenTaiKhoan</span>
+                                    <span>@nguoiDung.ho + @nguoiDung.tenLot + @nguoiDung.ten</span>
                                 </a>
                                 <div class="hop-dieu-khien" data-doi-tuong="HopDieuKhien">
                                     <ul>
