--- a/LCTMoodle/Views/NguoiDung/ChiTietTinNhan.cshtml
+++ b/LCTMoodle/Views/NguoiDung/ChiTietTinNhan.cshtml
@@ -7,16 +7,66 @@
     <link rel="stylesheet" type="text/css" href="/ChiTietTinNhan.css/NguoiDung" />
 }
 
-<article class="khung-chi-tiet-tin-nhan">
-    <section class="dong-tin">
-        <div class="hinh-dai-dien"></div>
-        <div class="chi-tiet">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-        </div>
+<article class="hop">
+    <section class="tieu-de">Hội thoại với tài khoản <b>LBC</b></section>
+    <section class="noi-dung">
+        <article class="khung-chi-tiet-tin-nhan">
+            <section class="dong-tin khach">
+                <div class="chi-tiet">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                <div class="hinh-dai-dien">
+                    <img src="/HinhDaiDienMacDinh.png/NguoiDung">
+                    <span>lbc</span>
+                </div>
+            </section>
+            <section class="dong-tin chu">
+                <div class="hinh-dai-dien">
+                    <img src="/HinhDaiDienMacDinh.png/NguoiDung">
+                    <span>lbc</span>
+                </div>
+                <div class="chi-tiet">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+            </section>
+            <section class="dong-tin khach">
+                <div class="chi-tiet">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+                <div class="hinh-dai-dien">
+                    <img src="/HinhDaiDienMacDinh.png/NguoiDung">
+                    <span>lbc</span>
+                </div>
+            </section>
+            <section class="dong-tin chu">
+                <div class="hinh-dai-dien">
+                    <img src="/HinhDaiDienMacDinh.png/NguoiDung">
+                    <span>lbc</span>
+                </div>
+                <div class="chi-tiet">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </div>
+            </section>
+        </article>
     </section>
 </article>
