--- a/LCTMoodle/Views/HoiDap/_Item_DanhSachCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_DanhSachCauHoi.cshtml
@@ -17,7 +17,7 @@
                 <div class="nguoi-dang">
                     <a href="/NguoiDung/Xem/@Model.nguoiTao.ma">                        
                         @NguoiDungView.hinhDaiDien(Model.nguoiTao)
-                        <span>@Model.nguoiTao.tenTaiKhoan</span>
+                        <span>@Model.nguoiTao.ho @Model.nguoiTao.tenLot @Model.nguoiTao.ten</span>
                     </a>
                 </div>
             }
