--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -76,7 +76,7 @@
                                 <div class="hinh-dai-dien">                                    
                                     @NguoiDungView.hinhDaiDien(Model.nguoiTao)
                                 </div>
-                                <span>@Model.nguoiTao.tenTaiKhoan</span>
+                                <span>@Model.nguoiTao.ho @Model.nguoiTao.tenLot @Model.nguoiTao.ten</span>
                             </div>
                         </a>
                     }
