--- a/LCTMoodle/Views/HoiDap/_Item_CauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_CauHoi.cshtml
@@ -68,7 +68,7 @@
                         <div class="hinh-dai-dien">                    
                             @NguoiDungView.hinhDaiDien(Model.nguoiTao)
                         </div>
-                        <span>@Model.nguoiTao.ho + @Model.nguoiTao.tenLot + @Model.nguoiTao.ten</span>
+                        <span>@Model.nguoiTao.ho @Model.nguoiTao.tenLot @Model.nguoiTao.ten</span>
                     </div>
                 </a>
             }
