--- a/LCTMoodle/Views/KhoaHoc/DanhSach.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/DanhSach.cshtml
@@ -17,7 +17,7 @@
     if (coQuyenQLNoiDungKH)
     {
         dsChucNang.Add("Tạo khóa học");
-        dsChucNang.Add("/KhoaHoc/Tao");
+        dsChucNang.Add("href='/KhoaHoc/Tao'");
     }
     
     if (dsChucNang.Count != 0)
